--- a/index.html
+++ b/index.html
@@ -1,123 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<style>
-    *{
-        padding: 0px;
-        margin: 0px;
-    }
-    li{
-        list-style-type: none;
-    }
-    .clear{
-        clear: both;
-    }
-
-    header{
-        width: 90%;
-        height: 100px;
-        margin-top: 30px;
-        margin-left: 20px;
-        border-bottom: solid 2px #ccc;
-    }
-    #logo{
-        margin-top: 30px;
-        border-bottom: dotted 2px gray;
-        float: left;
-    }
-    #top{
-        float: right;
-        margin: 30px 20px 0 0;
-    }
-
-    nav{
-        width: 90%;
-        height: 100px;
-        margin-top: 10px;
-    }
-    nav li{
-        float: left;
-        margin: 20px 30px;
-    }
-
-    section{
-        height: 400px;
-        float: left;
-        margin-top: 20px;
-        margin-bottom: 30px;
-        margin-left: 20px;
-    }
-
-    aside{
-        float: left;
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-    aside li{
-        margin-bottom: 70px;
-    }
-
-    footer{
-        width: 90%;
-        border-top: solid 2px #ccc;
-        margin-top: 20px;
-        margin-left: 20px;
-    }
-    #address{
-        float: left;
-        margin: 30px 0 0 10px;
-    }
-    #customer{
-        float: right;
-        margin: 30px 0 0 500px;
-    }
-</style>
-<title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>  
+        *{  margin:0px;  padding:0px;  }  
+        body{  width:960px;  margin:0 auto;  }  
+        #menu{  width:300px;  float:right;  }  
+        #content{  width:660px;  float:left;  }  
+        li{  list-style:none;  }
+        @media screen and (max-width:767px){  
+            body{  width:auto;  }  
+            #menu{  width:auto;  float:none;  background-color: #ddd;}
+            #content{  width:auto;  float:none;  }  } 
+    </style>
+    <title>Document</title>
 </head>
 <body>
-<div>
-<header>
-    <div id="logo">
-        AGGRO
-    </div>
-    <div id="top">
-        로그인 | 회원가입 
-    </div>
-</header>
+
+<div id="content">
+<h3>강아지풀</h3>
+<p>길가에 자라는</p>
 </div>
-<div>
-<nav>
+<div id="menu">
     <ul>
-        <li>손해보험 상식</li>
-        <li>회사소개</li>
-        <li>보험상품안내</li>
-        <li>마이페이지</li>
-        <li>고객센터</li>
-        <li>보험료안내</li>
+        <li>강아지풀 |</li>
+        <li>패랭이꽃 |</li>
+        <li>양귀비꽃 |</li>
     </ul>
-</nav>
-</div>
-<div>
-<section class="clear">
-    <img src="main.PNG">
-</section>
-<aside>
-    <ul>
-        <li>보험료계산하기</li>
-        <li>손해보험FAQ</li>
-    </ul>
-</aside>
-</div>
-<div class="clear">
-<footer>
-    <div id="address">
-        대표이사: 김가천
     </div>
-    <div id="customer">
-        고객센터
-    </div>
-</footer>
-</div>
 </body>
 </html>
